--- a/public_www/index.css
+++ b/public_www/index.css
@@ -1,14 +1,34 @@
 html, body {
-    height: 100%;
-  }
-  
-  body {
-    margin: 0;
-    display: flex;
-  
-    /* This centers our sketch horizontally. */
-    justify-content: center;
-  
-    /* This centers our sketch vertically. */
-    align-items: center;
-  }
+  height: 100%;
+}
+*
+{
+   /*font-size: 1em !important;
+   color: #000 !important;*/
+   font-family: Arial !important;
+}
+
+/*body {
+  margin: 0;
+  display: flex;
+  /* This centers our sketch horizontally. */
+/*  justify-content: center;*/
+  /* This centers our sketch vertically. */
+/*  align-items: center;
+}*/
+
+/*div {
+  /* This centers our sketch horizontally. */
+/*  justify-content: center;
+  /* This centers our sketch vertically. */
+/*  align-items: center;
+}*/
+
+/*canvas {
+  padding-left: 0;
+  padding-right: 0;
+  margin-left: auto;
+  margin-right: auto;
+  display: block;
+  width: 800px;
+}*/
